# NyanLang

./: .gitignore  README.md  main.py  pyproject.toml
claw-compiler/: .coverage  README.md  main.py  pyproject.toml
claw-compiler/docs/: SPECIFICATION.MD
claw-compiler/examples/expected_ast/: flows.nyan.ast  hello_world.nyan.ast
claw-compiler/examples/expected_token/: blocks.nyan.tokens  control_flow.nyan.tokens  flows.nyan.tokens  hello_world.nyan.tokens  variables.nyan.tokens
claw-compiler/examples/source/: flows.nyan  variables.nyan
claw-compiler/src/claw/: ast.py  lexer.py  tokens.py
claw-compiler/src/claw/errors/: __init__.py  _lexer_error.py  base.py  lexer_error.py  parser_error.py
claw-compiler/src/claw/parser/: __init__.py  factory.py  interfaces.py  main.py  precedence.py
claw-compiler/src/claw/parser/expressions/: _if.py  assignment.py  call.py  group.py  infix.py  literal.py  member.py  prefix.py
claw-compiler/src/claw/parser/statements/: _break.py  _continue.py  _return.py  block.py  definition.py  flow.py  let.py  types.py
claw-compiler/tests/: test_ast.py  test_interfaces.py  test_lexer.py  test_lexer_integration.py  test_parser.py  test_parser_integration.py  test_tokens.py
claw_compiler/: .gitignore  NOTICE  main.py  pyproject.toml
claw_compiler/examples/: mvp.nyan
claw_compiler/src/claw/: ast.py  cli.py  codegen.py  compiler.py  lexer.py  parser.py  token.py
claw_compiler/src/claw/codegen/: __init__.py  expression.py  main.py  statement.py  type.py
claw_compiler/src/claw/parser/: __init__.py  expression.py  expression_parser.py  main.py  statement.py  statement_parser.py  utils.py
docs/: SPECIFICATION.MD
examples/: blocks.nyan  control_flow.nyan  hello_world.nyan
tests/: test_lexer.py
